[gd_scene load_steps=42 format=2]

[ext_resource path="res://main_menu/settings.png" type="Texture" id=1]
[ext_resource path="res://others/buttons/hover.png" type="Texture" id=2]
[ext_resource path="res://others/buttons/pressed.png" type="Texture" id=3]
[ext_resource path="res://others/buttons/normal.png" type="Texture" id=4]
[ext_resource path="res://others/mouse/Mouse.tscn" type="PackedScene" id=5]
[ext_resource path="res://main_menu/settings/grabber-highlighted.png" type="Texture" id=6]
[ext_resource path="res://others/transitions/TransitionBlock.tscn" type="PackedScene" id=7]
[ext_resource path="res://main_menu/settings/grabber.png" type="Texture" id=8]
[ext_resource path="res://main_menu/settings/slider-bar.png" type="Texture" id=9]
[ext_resource path="res://main_menu/settings/grabber-disabled.png" type="Texture" id=10]
[ext_resource path="res://main_menu/settings/checkbox-pressed.png" type="Texture" id=11]
[ext_resource path="res://main_menu/Settings.gd" type="Script" id=12]
[ext_resource path="res://main_menu/settings/checkbox-hover.png" type="Texture" id=13]
[ext_resource path="res://main_menu/settings/checkbox-normal.png" type="Texture" id=14]
[ext_resource path="res://others/buttons/disabled.png" type="Texture" id=15]
[ext_resource path="res://main_menu/settings/checkbox-pressed-hover.png" type="Texture" id=16]
[ext_resource path="res://audio/sound-effects/change-focus-option.wav" type="AudioStream" id=17]
[ext_resource path="res://audio/sound-effects/select-focus.wav" type="AudioStream" id=18]
[ext_resource path="res://audio/sound-effects/without-fullscreen.wav" type="AudioStream" id=19]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform vec2 direction = vec2(1.0, 0.0);
uniform float speed = 0.07f;

void fragment() {
	COLOR = texture(TEXTURE, UV + (direction * TIME * speed));
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/direction = Vector2( 1, 0 )
shader_param/speed = -0.1

[sub_resource type="DynamicFontData" id=19]
antialiased = false
font_path = "res://others/fonts/PixelOperatorMono-Bold.ttf"

[sub_resource type="DynamicFont" id=20]
size = 74
font_data = SubResource( 19 )

[sub_resource type="DynamicFontData" id=17]
antialiased = false
font_path = "res://others/fonts/Pixellari.ttf"

[sub_resource type="DynamicFont" id=18]
size = 37
font_data = SubResource( 17 )

[sub_resource type="StyleBoxTexture" id=15]
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 44, 4 )
expand_margin_top = 10.0
expand_margin_bottom = 11.0
modulate_color = Color( 1, 0, 0, 1 )

[sub_resource type="StyleBoxTexture" id=33]
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 44, 4 )
expand_margin_top = 10.0
expand_margin_bottom = 11.0
modulate_color = Color( 0.207843, 0.498039, 1, 1 )

[sub_resource type="StyleBoxTexture" id=16]
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 44, 4 )
expand_margin_top = 10.0
expand_margin_bottom = 11.0

[sub_resource type="StyleBoxTexture" id=40]
texture = ExtResource( 13 )
region_rect = Rect2( 0, 0, 11, 12 )

[sub_resource type="StyleBoxTexture" id=44]
texture = ExtResource( 11 )
region_rect = Rect2( 0, 0, 11, 12 )

[sub_resource type="StyleBoxEmpty" id=48]

[sub_resource type="StyleBoxEmpty" id=37]

[sub_resource type="StyleBoxTexture" id=41]
texture = ExtResource( 16 )
region_rect = Rect2( 0, 0, 11, 12 )

[sub_resource type="StyleBoxTexture" id=43]
texture = ExtResource( 14 )
region_rect = Rect2( 0, 0, 11, 12 )

[sub_resource type="DynamicFontData" id=13]
antialiased = false
font_path = "res://others/fonts/8-BIT WONDER.TTF"

[sub_resource type="DynamicFont" id=14]
size = 29
font_data = SubResource( 13 )

[sub_resource type="StyleBoxTexture" id=10]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 44, 11 )

[sub_resource type="StyleBoxTexture" id=11]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 44, 11 )

[sub_resource type="StyleBoxEmpty" id=49]

[sub_resource type="StyleBoxTexture" id=47]
texture = ExtResource( 15 )
region_rect = Rect2( 0, 0, 44, 12 )

[sub_resource type="StyleBoxTexture" id=12]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 44, 12 )

[node name="SettingsGame" type="Control"]
pause_mode = 2
script = ExtResource( 12 )

[node name="TransitionBlock" parent="." instance=ExtResource( 7 )]

[node name="Background" type="ParallaxBackground" parent="."]
layer = 8

[node name="Background" type="ColorRect" parent="Background"]
margin_left = -3.0
margin_top = -7.0
margin_right = 1035.0
margin_bottom = 611.0
color = Color( 0, 0, 0, 1 )

[node name="MainMenuScroll" type="ParallaxLayer" parent="Background"]
motion_scale = Vector2( 0.3, 0.6 )
motion_mirroring = Vector2( 1216.32, 0 )

[node name="MainMenu" type="Sprite" parent="Background/MainMenuScroll"]
modulate = Color( 1, 1, 1, 0.588235 )
material = SubResource( 2 )
position = Vector2( 606, 300 )
scale = Vector2( 0.42, 0.42 )
z_index = 10
texture = ExtResource( 1 )

[node name="BlackRect" type="ColorRect" parent="Background"]
margin_left = -3.0
margin_top = -7.0
margin_right = 1035.0
margin_bottom = 611.0
color = Color( 0, 0, 0, 0.360784 )

[node name="Options" type="CanvasLayer" parent="."]
layer = 9

[node name="Volume" type="Control" parent="Options"]
margin_right = 1034.0
margin_bottom = 612.0

[node name="VolumeLabel" type="Label" parent="Options/Volume"]
margin_left = 416.0
margin_top = 56.0
margin_right = 645.0
margin_bottom = 137.0
custom_fonts/font = SubResource( 20 )
text = "Volume"

[node name="PercentageLabel" type="Label" parent="Options/Volume"]
margin_left = 474.0
margin_top = 229.0
margin_right = 552.0
margin_bottom = 267.0
custom_fonts/font = SubResource( 18 )
text = "XX%"

[node name="VolumeSlider" type="HSlider" parent="Options/Volume"]
margin_left = 144.0
margin_top = 154.0
margin_right = 528.0
margin_bottom = 186.0
rect_scale = Vector2( 2, 2 )
focus_neighbour_top = NodePath("../../BtnMainMenu")
focus_neighbour_bottom = NodePath("../../FullScreen/FullScreenCheckBox")
custom_icons/grabber_disabled = ExtResource( 10 )
custom_icons/grabber_highlight = ExtResource( 6 )
custom_icons/grabber = ExtResource( 8 )
custom_styles/slider = SubResource( 15 )
custom_styles/grabber_area_highlight = SubResource( 33 )
custom_styles/grabber_area = SubResource( 16 )
max_value = 1.0
step = 0.0
value = 1.0

[node name="FullScreen" type="Control" parent="Options"]
margin_left = 1.0
margin_right = 1035.0
margin_bottom = 607.0

[node name="FullScreenLabel" type="Label" parent="Options/FullScreen"]
margin_left = 229.0
margin_top = 340.0
margin_right = 599.0
margin_bottom = 421.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 20 )
text = "Fullscreen"

[node name="FullScreenCheckBox" type="CheckBox" parent="Options/FullScreen"]
margin_left = 635.0
margin_top = 347.0
margin_right = 7.50064e+06
margin_bottom = 419.0
rect_scale = Vector2( 1e-05, 1 )
focus_neighbour_top = NodePath("../../Volume/VolumeSlider")
focus_neighbour_bottom = NodePath("../../BtnMainMenu")
size_flags_horizontal = 4
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0
custom_styles/hover = SubResource( 40 )
custom_styles/pressed = SubResource( 44 )
custom_styles/focus = SubResource( 48 )
custom_styles/disabled = SubResource( 37 )
custom_styles/hover_pressed = SubResource( 41 )
custom_styles/normal = SubResource( 43 )
align = 1

[node name="BtnMainMenu" type="Button" parent="Options"]
margin_left = 392.0
margin_top = 476.0
margin_right = 614.0
margin_bottom = 556.0
focus_neighbour_top = NodePath("../FullScreen/FullScreenCheckBox")
focus_neighbour_bottom = NodePath("../Volume/VolumeSlider")
custom_colors/font_color_focus = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 14 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = SubResource( 49 )
custom_styles/disabled = SubResource( 47 )
custom_styles/normal = SubResource( 12 )
text = "RESUME"

[node name="Mouse" parent="Options" instance=ExtResource( 5 )]
scale = Vector2( 3, 3 )

[node name="ChangeSoundEffect" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )
bus = "SoundEffects"

[node name="SelectSoundEffect" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )
bus = "SoundEffects"

[node name="WithoutFullScreen" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 19 )
bus = "SoundEffects"

[connection signal="tree_exited" from="." to="." method="_on_SettingsGame_tree_exited"]
[connection signal="focus_entered" from="Options/Volume/VolumeSlider" to="." method="_on_VolumeSlider_focus_entered"]
[connection signal="focus_exited" from="Options/Volume/VolumeSlider" to="." method="_on_VolumeSlider_focus_exited"]
[connection signal="mouse_entered" from="Options/Volume/VolumeSlider" to="." method="_on_VolumeSlider_mouse_entered"]
[connection signal="mouse_exited" from="Options/Volume/VolumeSlider" to="." method="_on_VolumeSlider_mouse_exited"]
[connection signal="focus_entered" from="Options/FullScreen/FullScreenCheckBox" to="." method="_on_FullScreenCheckBox_focus_entered"]
[connection signal="focus_exited" from="Options/FullScreen/FullScreenCheckBox" to="." method="_on_FullScreenCheckBox_focus_exited"]
[connection signal="pressed" from="Options/FullScreen/FullScreenCheckBox" to="." method="_on_FullScreenCheckBox_pressed"]
[connection signal="focus_entered" from="Options/BtnMainMenu" to="." method="_on_BtnMainMenu_focus_entered"]
[connection signal="pressed" from="Options/BtnMainMenu" to="." method="_on_BtnMainMenu_pressed"]
